[package]
name = "graf_zeppelin"
version = "0.1.0-beta"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.23"
tracing-subscriber = "0.3"
serenity = { version = "^0.12.0", features = ["cache", "framework", "standard_framework", "rustls_backend"] }
dotenv = { version = "^0.15.0" }
tokio = { version = "1.0", features = ["macros", "signal", "rt-multi-thread"] }
rustrict = "0.7.19"